--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nasi Uduk Mak Enak</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Nasi Uduk Mak Enak</h1>
-    <p>Lezat - Gurih - Bikin Nagih!</p>
-    <nav>
-      <ul>
-        <li><a href="#tentang">Tentang</a></li>
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#kontak">Kontak</a></li>
-      </ul>
-    </nav>
+    <div class="header-content">
+      <h1>Nasi Uduk Mak Enak</h1>
+      <p>Lezat, Gurih, Bikin Nagih!</p>
+      <a href="#menu" class="btn-cta">Lihat Menu</a>
+    </div>
   </header>
 
-  <section id="tentang">
+  <section id="tentang" class="section">
     <h2>Tentang Kami</h2>
-    <p>Nasi Uduk Mak Enak hadir dengan cita rasa khas rumahan. Dibuat dari beras pilihan, santan kelapa segar, dan bumbu tradisional. Cocok untuk sarapan, makan siang, atau acara spesial Anda!</p>
+    <p>Nasi Uduk Mak Enak adalah tempat terbaik menikmati nasi uduk khas Betawi dengan rasa autentik dan sambal yang pedas mantap. Kami menggunakan bahan segar setiap hari dan memasak dengan penuh cinta!</p>
   </section>
 
-  <section id="menu">
-    <h2>Menu Andalan</h2>
-    <ul>
-      <li>Nasi Uduk Komplit (Ayam, Telur, Tahu, Tempe)</li>
-      <li>Nasi Uduk Telur Balado</li>
-      <li>Nasi Uduk Ayam Goreng</li>
-      <li>Paket Nasi Uduk Acara (min. 20 pax)</li>
-    </ul>
+  <section id="menu" class="section">
+    <h2>Menu Favorit</h2>
+    <div class="menu-list">
+      <div class="menu-item">
+        <h3>Nasi Uduk Komplit</h3>
+        <p>Ayam goreng, telur balado, tahu, tempe, sambal & lalapan</p>
+      </div>
+      <div class="menu-item">
+        <h3>Nasi Uduk Telur Balado</h3>
+        <p>Telur balado pedas gurih, nasi uduk wangi, sambal</p>
+      </div>
+      <div class="menu-item">
+        <h3>Nasi Uduk Ayam Bakar</h3>
+        <p>Ayam bakar manis, sambal terasi, nasi uduk hangat</p>
+      </div>
+    </div>
   </section>
 
-  <section id="kontak">
+  <section id="kontak" class="section kontak">
     <h2>Hubungi Kami</h2>
-    <p>Whatsapp: <a href="https://wa.me/6281234567890">0812-3456-7890</a></p>
+    <p>Pesan sekarang lewat:</p>
+    <a href="https://wa.me/6281234567890" class="btn-contact" target="_blank">WhatsApp: 0812-3456-7890</a>
     <p>Instagram: <a href="https://instagram.com/nasiudukmakenak" target="_blank">@nasiudukmakenak</a></p>
     <p>Alamat: Jl. Kenikmatan No. 88, Jakarta</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Nasi Uduk Mak Enak. Semua hak dilindungi.</p>
+    <p>&copy; 2025 Nasi Uduk Mak Enak. Dibuat dengan rasa & cinta.</p>
   </footer>
 </body>
 </html>
